--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                             <div class="row">
                                 <div class="col-xl-7">
                                     <div class="slide-content">
-                                        <span data-animation="fadeInRight" data-delay=".2s">Divine Crafted/span>
+                                        <span data-animation="fadeInRight" data-delay=".2s">Divine Crafted</span>
                                         <h1 class="white-heading" data-animation="fadeInUp" data-delay=".5s">Pure Art
                                         Crafted By Hand</h1>
                                         <div class="slide-btn">
