--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="manifest" href="site.html">
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicons.png">
          <!-- fevicon -->
-        <link rel="icon" href="img/favicons.png" type="image/gif" />
+        <link rel="icon" href="img/favicons.png" type="image/x-icon" />
         <!-- Place favicon.ico in the root directory -->
          <!-- site metas -->
       <title>Touchofgod</title>
