--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <title>Touch of God</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="manifest" href="site.html">
+        <!-- <link rel="manifest" href="site.html"> -->
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicons.png">
          <!-- fevicon -->
         <link rel="icon" href="img/favicons.png" type="image/x-icon" />
         <!-- Place favicon.ico in the root directory -->
          <!-- site metas -->
-      <title>Touchofgod</title>
       <meta name="keywords" content="Handcrafted">
       <meta name="description" content="Handcrafted wooden product touchofgod touchofgodkochi">
       <meta name="author" content="TouchofGod ">
