--- a/Embernest-slientbloom2-product-details.html
+++ b/Embernest-slientbloom2-product-details.html
@@ -400,8 +400,8 @@
                             </div>
                             <h2 class="pro-details-title mb-15">The Slient-bloom</h2>
                             <div class="details-price mb-20">
-                                <span>₹40,000 INR </span>
-                                <span class="old-price">₹56,000 INR</span>
+                                <span>Sold Out </span>
+                                <!-- <span class="old-price">₹56,000 INR</span> -->
                             </div>
                             <div class="product-variant">
 
