--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
   <a href="https://wa.me/917994899700" class="whatsapp-button" target="_blank">
     <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" />
   </a>
+ <a href="https://wa.me/917994899700" target="_blank">
   <span class="whatsapp-label">Chat with us</span>
+</a>
 </div>
 
             <!-- banner area start -->
@@ -497,8 +499,8 @@
                                                         </h4>
                                                         <div class="product-meta">
                                                             <div class="pro-price">
-                                                                <span>₹75,000 INR</span>
-                                                                <span class="old-price">₹87,000 INR</span>
+                                                                <span>Sold Out</span>
+                                                                <!-- <span class="old-price">₹87,000 INR</span> -->
                                                             </div>
                                                         </div>
                                                         <div class="product-wishlist">
@@ -538,8 +540,8 @@
                                                         </h4>
                                                         <div class="product-meta">
                                                             <div class="pro-price">
-                                                                <span>₹45,000 INR</span>
-                                                                <span class="old-price">₹71,429 INR</span>
+                                                                <span>Sold Out</span>
+                                                                <!-- <span class="old-price">₹71,429 INR</span> -->
                                                             </div>
                                                         </div>
                                                         <div class="product-wishlist">
@@ -581,8 +583,8 @@
                                                         </h4>
                                                         <div class="product-meta">
                                                             <div class="pro-price">
-                                                                <span>₹45,000 INR</span>
-                                                                <span class="old-price">₹71,429 INR</span>
+                                                                <span>Sold Out</span>
+                                                                <!-- <span class="old-price">₹71,429 INR</span> -->
                                                             </div>
                                                         </div>
                                                         <div class="product-wishlist">
@@ -618,8 +620,8 @@
                                                         </h4>
                                                         <div class="product-meta">
                                                             <div class="pro-price">
-                                                                <span>₹45,000 INR</span>
-                                                                <span class="old-price">₹71,429 INR</span>
+                                                                <span>Sold Out</span>
+                                                                <!-- <span class="old-price">₹71,429 INR</span> -->
                                                             </div>
                                                         </div>
                                                         <div class="product-wishlist">
