--- a/Camfire-product-details-.html
+++ b/Camfire-product-details-.html
@@ -400,8 +400,8 @@
                             </div>
                             <h2 class="pro-details-title mb-15">Rustic CampFire Lantern</h2>
                             <div class="details-price mb-20">
-                                <span>₹75,000 INR</span>
-                                <span class="old-price">₹1,19,048 INR</span>
+                                <span>Sold Out</span>
+                                <!-- <span class="old-price">₹1,19,048 INR</span> -->
                             </div>
                             <div class="product-variant">
 
@@ -831,10 +831,7 @@ A true collector’s piece, the Rustic Camp Fire Lantern is more than a lamp—i
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="img/logo/Touch-of-god-logo.png" alt=""></a>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore mag na
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo consequat.
+                                <p>At Touch of God, we believe every handcrafted piece carries a spark of divine creativity. Our collection blends art, tradition, and nature—each item is thoughtfully made to bring warmth, beauty, and meaning to your space. Crafted with love, inspired by spirit.
                                 </p>
                                 <div class="footer-time d-flex mt-30">
                                     <div class="time-icon">
@@ -842,7 +839,7 @@ A true collector’s piece, the Rustic Camp Fire Lantern is more than a lamp—i
                                     </div>
                                     <div class="time-text">
                                         <span>Got Questions ? Call us 24/7!</span>
-                                        <h2>(0600) 874 548</h2>
+                                        <h2>(91) 799 4899 700</h2>
                                     </div>
                                 </div>
                             </div>
@@ -864,12 +861,12 @@ A true collector’s piece, the Rustic Camp Fire Lantern is more than a lamp—i
                             <div class="footer-widget pl-50 mb-40">
                                 <h3>Location</h3>
                                 <ul class="footer-link">
-                                    <li><a href="#">New York</a></li>
-                                    <li><a href="#">Tokyo</a></li>
+                                    <li><a href="#">Kochi</a></li>
+                                    <!-- <li><a href="#">Tokyo</a></li>
                                     <li><a href="#">Dhaka</a></li>
                                     <li><a href="#">Chittagong</a></li>
                                     <li><a href="#">China</a></li>
-                                    <li><a href="#">Japan</a></li>
+                                    <li><a href="#">Japan</a></li> -->
                                 </ul>
                             </div>
                         </div>
