Commented Banner section due to offers problem

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 </div>
 
             <!-- banner area start -->
-            <section class="banner-area pt-30 pl-15 pr-15">
+            <!-- <section class="banner-area pt-30 pl-15 pr-15">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-4 col-md-6">
@@ -427,7 +427,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- banner area end -->
             <!-- product-area start -->
             <section class="product-area box-90 pt-70 pb-40">
